# nexus-assess

./: .coveragerc  .env.example  .gitignore  .pylintrc  Dockerfile  README.md  conftest.py  docker-compose-production.yml  docker-compose.yml  manage.py  pyproject.toml  redis.conf
.circleci/: config.yml
assessments/: admin.py  apps.py  models.py  tasks.py  urls.py  views.py
assessments/applogic/: __init__.py  appendix_2_text.json  business_impact_applogic.py  csv_export_applogic.py  data_classification_applogic.py  form_results_applogic.py  generate_docx.py  generate_output_1.py  generate_output_2.py  gxp_eres_applogic.py  gxp_impact_applogic.py  privacy_impact_applogic.py  rating_applogic.py  sox_impact_applogic.py  summary_applogic.py  table_content.json
assessments/migrations/: 0001_initial.py  0002_alter_compliancecrititcalityassessment_options_and_more.py  0003_compliancecrititcalityassessment_server_host_and_more.py  0004_rename_compliancecrititcalityassessment_compliancecriticalityassessment.py  0005_alter_compliancecriticalityassessment_options.py  0006_remove_compliancecriticalityassessment_user_and_more.py  0007_alter_compliancecriticalityassessment_drafted_by_and_more.py  0008_rename_reviewcomments_reviewcomment.py  0009_compliancecriticalityassessment_datetime_approved_by_business_owner_and_more.py  0010_compliancecriticalityassessment_hosting_and_type_and_more.py  0011_alter_compliancecriticalityassessment_solution_type_and_more.py  0012_alter_compliancecriticalityassessment_solution_type.py  0013_compliancecriticalityassessment_summary.py  0014_compliancecriticalityassessment_gxp_impact_and_more.py  0015_compliancecriticalityassessment_business_impact_and_more.py  0016_alter_compliancecriticalityassessment_approved_by_business_owner_and_more.py  0017_compliancecriticalityassessment_name.py  0018_remove_report_output_csv_1_and_more.py  0019_remove_report_created_at_remove_report_updated_at_and_more.py  0020_assessmentexport.py  0021_remove_report_output_docx_1_and_more.py  0022_auto_20240219_0908.py  0023_alter_report_compressed_reports.py  (+2 more)
core/: middleware.py  tasks.py  urls.py  utils.py
core/tests/: test_tasks.py  (+1 more)
nexus_assess_backend/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
requirements/: admin.py  apps.py  models.py
users/: adapter.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
(+56 files in other folders)
